# ray-tracer

./: .gitignore  Cargo.toml
server/: index.html  index.js  package-lock.json  package.json
src/: base.rs  camera.rs  canvas.rs  hitable.rs  lib.rs  material.rs  ray.rs
