[package]
name = "ray"
version = "0.1.0"
authors = ["DrPandemic <bipbip500@gmail.com>"]
edition = "2018"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.25"
cgmath = "0.17"
rand = { version = "0.6.5", features = ["wasm-bindgen"] }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]